# agent-mcp-observability

./: .gitignore
ai-example/: .gitignore  main.py  mcp_agent.py  openllmetry.py  pyproject.toml  tracing.py  utils.py
mpc-server/: package-lock.json  package.json  tsconfig.json
mpc-server/src/: index.ts  obs_index.ts  tracer.ts
